--- a/test.html
+++ b/test.html
@@ -9,8 +9,13 @@
 <script src="kanjax/kanjax.js"></script>
 <script language="JavaScript" type="text/javascript">
 $(function() {
-    KanJax.loadStaticJSON = true;
-    KanJax.basicInstall();
+    //KanJax.loadStaticJSON = true;
+    KanJax.basicInstall(document.body, {
+        kanji_info: 1,
+        dict: 1,
+        rubies: 1,
+        full_reading: 0
+    });
 });
 </script>
 </head>
