forgotten to restore

--- a/test_proxy.html
+++ b/test_proxy.html
@@ -103,7 +103,7 @@ function onResize() {
 }
 
 $(function() {
-    KanJax.basePath = '/~maurizio/kanjax/kanjax/';
+    //KanJax.basePath = '/~maurizio/kanjax/kanjax/';
     KanJax.styleFile = 'kanjax_light.css';
     KanJax.setupPopup();
 
@@ -250,8 +250,8 @@ function myBack() {
 </td></tr></tbody></table>
     <div id="showerr"></div>
 
-    <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/iframe/%E6%97%A5%E6%9C%AC%20-%20Wikipedia.html"></iframe>
-    <!--<iframe id="myiframe" onLoad="myFrameLoad()" src="proxy.php?url=https%3A%2F%2Fja.wikipedia.org%2Fwiki%2F%25E6%2597%25A5%25E6%259C%25AC"></iframe>-->
+    <!--<iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/iframe/%E6%97%A5%E6%9C%AC%20-%20Wikipedia.html"></iframe>-->
+    <iframe id="myiframe" onLoad="myFrameLoad()" src="proxy.php?url=https%3A%2F%2Fja.wikipedia.org%2Fwiki%2F%25E6%2597%25A5%25E6%259C%25AC"></iframe>
     <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="proxy.php?url=http%3A%2F%2Fjisho.org%2Fsearch%2F%2523kanji%2520%25E8%25B2%25AB"></iframe> -->
     <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/proxy.php?url=https%3A%2F%2Fja.wikipedia.org%2Fwiki%2F%25E3%2583%25A2%25E3%2583%25BC%25E3%2583%25A9"></iframe> -->
     <!-- fixme: -->
