force via proxy

--- a/test_proxy.html
+++ b/test_proxy.html
@@ -149,7 +149,7 @@ function myRemoveInfo() {
 }
 
 myHistory = [];
-forceViaProxy = false;//true;
+forceViaProxy = true;
 
 function myFrameLoad() {
     var iframe = document.getElementById("myiframe");
