default empty text

--- a/tagger.html
+++ b/tagger.html
@@ -313,8 +313,7 @@ function setError(e) {
     </td></tr></table>
   </td><td class="cell" style="padding-left: 0.2em" id="myaddress3">
         <div id="myaddress2" style="position: absolute; top: 0; height: 100%">
-            <textarea rows="5" id="myaddress">
-            </textarea>
+            <textarea rows="5" id="myaddress"></textarea>
         </div>
 <!--        
 私の文が正しくない場合、何か適切な例文を教えていただければ、とてもうれしいです。
