restrict furigana hide

--- a/tagger.html
+++ b/tagger.html
@@ -109,11 +109,11 @@ iframe {
 .kanjax_lemma {
     word-break: keep-all;
 }
-.kanjax_rt {
+.textelement .kanjax_rt {
     color: transparent;
     border: solid 1px lightgray;
 }
-.show_rt .kanjax_rt {
+.textelement .show_rt .kanjax_rt {
     color: inherit;
     border: solid 1px transparent;
 }
